--- a/code/project/templates/base/body/sidebar.html
+++ b/code/project/templates/base/body/sidebar.html
@@ -10,14 +10,14 @@
 
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image">
-                {% if request.user.image %}
-                    <img src="{{request.user.lawyer_user.first.image.url}}" class="img-circle elevation-2" alt="User Image">
+                {% if request.user.lawyer_user %}
+                    <img src="{{request.user.lawyer_user.image.url}}" alt="user-avatar" style="width: 40px; height: 40px;" class="img-circle img-fluid">
                 {% else %}
-                    <img src="{% static 'dist/img/images/unknown_user.jpg' %}" class="img-circle elevation-2" alt="User Image">
+                    <img src="{% static 'dist/img/images/unknown_user.jpg' %}" alt="user-avatar" style="width: 40px height: 40px" class="img-circle img-fluid">
                 {% endif %}
             </div>
             <div class="info">
-                <a href="#" class="d-block"> Dr(a) {{ request.user }}</a>
+                <a class="mont-serrat"> Dr(a) {{ request.user.lawyer_user.name }}</a>
             </div>
         </div>
 
