--- a/code/registry/templates/registry_create.html
+++ b/code/registry/templates/registry_create.html
@@ -11,7 +11,7 @@
     <div class="card">
         <div class="card-header">
             <div class="card-title">
-                <span class="mont-serrat" style="font-size: 24px;">Criando novo registro</span>
+                <span class="mont-serrat" style="font-size: 24px;">Novo registro</span>
             </div>
         </div>
         <div class="card-body">
@@ -24,16 +24,16 @@
                 </div>
                 {% endfor %}
                 <div class="form-group">
-                    <label for="inputName">CPF</label>
+                    <label for="inputName">CPF *</label>
                     <input type="text" value="{{registry.registry_cpf}}" name="registry_cpf" class="form-control cpf"/>
                 </div>
                 <div class="form-group">
-                    <label for="inputName">CNPJ</label>
+                    <label for="inputName">CNPJ *</label>
                     <input type="text" value="{{registry.registry_cnpj}}" name="registry_cnpj" class="form-control cnpj"/>
                 </div>
                 
                 <button type="submit" class="btn btn-lg btn-success">
-                    Criando
+                    Registrar
                 </button>
             </form>
         </div>
