--- a/code/advogado/templates/lawyer_list.html
+++ b/code/advogado/templates/lawyer_list.html
@@ -19,7 +19,7 @@
                     <span>
                         &nbsp  &nbsp
                     </span>
-                    <input type="search" class="form-control form-control-lg" name="q" placeholder="Pesquisar advogado">
+                    <input type="search" class="form-control form-control-lg" name="q" placeholder="Pesquisar advogado" value="{% if request.GET.q %}{{ request.GET.q }}{% endif %}">
                     <div class="input-group-append">
                         <button type="submit" class="btn btn-lg btn-default">
                             <i class="fa fa-search"></i>
