--- a/code/project/templates/emails/cliente_message.html
+++ b/code/project/templates/emails/cliente_message.html
@@ -571,8 +571,9 @@
                                                 style="font-size:0;padding-bottom:8px;word-break:break-word;">
                                                 <div style="text-align:center;">
                                                     <p style="Margin:0;text-align:center;">
-                                                        <span
-                                                            style="font-size:28px;font-family:Inter,Arial,sans-serif;font-weight:700;color:#000000;line-height:114%;">{{titulo}}</span>
+                                                        <span style="font-size:28px;font-family:Inter,Arial,sans-serif;font-weight:700;color:#000000;line-height:114%;">
+                                                            {{title}}
+                                                        </span>
                                                     </p>
                                                 </div>
                                             </td>
@@ -588,7 +589,7 @@
                                                         </span>
                                                         <span
                                                             style="font-size:20px;font-family:Inter,Arial,sans-serif;font-weight:800;color:#000000;line-height:150%;">
-                                                            {{nome}}
+                                                            {{name}}
                                                         </span>
                                                     </p>
                                                     <p style="Margin:0;">
@@ -596,7 +597,7 @@
                                                             style="font-size:20px;font-family:Inter,Arial,sans-serif;font-weight:600;color:#000000;line-height:150%;"></span>
                                                         <span
                                                             style="font-size:16px;font-family:Inter,Arial,sans-serif;font-weight:400;color:#777777;line-height:150%;">
-                                                            {{texto}}
+                                                            {{text}}
                                                         </span>
                                                     </p>
                                                 </div>
