--- a/code/processo/templates/lawsuit_board/lawsuit_board.html
+++ b/code/processo/templates/lawsuit_board/lawsuit_board.html
@@ -7,171 +7,154 @@
     <li class="breadcrumb-item">Processo</li>
 {% endblock %}
 {% block content %}
-<div class="content-wrapper kanban" style="min-height: 366px;">
-    <section class="content pb-3">
-    <div class="container-fluid h-90">
-    <div class="card card-row card-secondary">
-    <div class="card-header">
-    <h3 class="card-title">
-    Backlog
-    </h3>
+<div class="row">
+    <div class="col-12 col-lg-6 col-xl-3">
+        <div class="card card-border-primary">
+            <div class="card-header">
+                <div class="card-actions float-right">
+                    <div class="dropdown show">
+                        <a href="#" data-toggle="dropdown" data-display="static">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal align-middle">
+                                <circle cx="12" cy="12" r="1"></circle>
+                                <circle cx="19" cy="12" r="1"></circle>
+                                <circle cx="5" cy="12" r="1"></circle>
+                            </svg>
+                        </a>
+
+                        <div class="dropdown-menu dropdown-menu-right">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </div>
+                </div>
+                <h5 class="card-title">Iniciando</h5>
+            </div>
+            <div class="card-body p-3">
+                <div class="card mb-3 bg-light">
+                    <div class="card-body p-3">
+                        <p>Curabitur ligula sapien, tincidunt non, euismod vitae, posuere imperdiet, leo. Maecenas malesuada.</p>
+                        <div class="float-right mt-n1">
+                            <img src="https://bootdey.com/img/Content/avatar/avatar6.png" width="32" height="32" class="rounded-circle" alt="Avatar">
+                        </div>
+                        <a class="btn btn-outline-primary btn-sm" href="#">View</a>
+                    </div>
+                </div>
+                <a href="#" class="btn btn-primary btn-block">Add new</a>
+            </div>
+        </div>
     </div>
-    <div class="card-body">
-    <div class="card card-info card-outline">
-     <div class="card-header">
-    <h5 class="card-title">Create Labels</h5>
-    <div class="card-tools">
-    <a href="#" class="btn btn-tool btn-link">#3</a>
-    <a href="#" class="btn btn-tool">
-    <i class="fas fa-pen"></i>
-    </a>
+    <div class="col-12 col-lg-6 col-xl-3">
+        <div class="card card-border-primary">
+            <div class="card-header">
+                <div class="card-actions float-right">
+                    <div class="dropdown show">
+                        <a href="#" data-toggle="dropdown" data-display="static">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal align-middle">
+                                <circle cx="12" cy="12" r="1"></circle>
+                                <circle cx="19" cy="12" r="1"></circle>
+                                <circle cx="5" cy="12" r="1"></circle>
+                            </svg>
+                        </a>
+
+                        <div class="dropdown-menu dropdown-menu-right">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </div>
+                </div>
+                <h5 class="card-title">Iniciando</h5>
+            </div>
+            <div class="card-body p-3">
+                <div class="card mb-3 bg-light">
+                    <div class="card-body p-3">
+                        <p>Curabitur ligula sapien, tincidunt non, euismod vitae, posuere imperdiet, leo. Maecenas malesuada.</p>
+                        <div class="float-right mt-n1">
+                            <img src="https://bootdey.com/img/Content/avatar/avatar6.png" width="32" height="32" class="rounded-circle" alt="Avatar">
+                        </div>
+                        <a class="btn btn-outline-primary btn-sm" href="#">View</a>
+                    </div>
+                </div>
+                <a href="#" class="btn btn-primary btn-block">Add new</a>
+            </div>
+        </div>
     </div>
+    <div class="col-12 col-lg-6 col-xl-3">
+        <div class="card card-border-primary">
+            <div class="card-header">
+                <div class="card-actions float-right">
+                    <div class="dropdown show">
+                        <a href="#" data-toggle="dropdown" data-display="static">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal align-middle">
+                                <circle cx="12" cy="12" r="1"></circle>
+                                <circle cx="19" cy="12" r="1"></circle>
+                                <circle cx="5" cy="12" r="1"></circle>
+                            </svg>
+                        </a>
+
+                        <div class="dropdown-menu dropdown-menu-right">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </div>
+                </div>
+                <h5 class="card-title">Iniciando</h5>
+            </div>
+            <div class="card-body p-3">
+                <div class="card mb-3 bg-light">
+                    <div class="card-body p-3">
+                        <p>Curabitur ligula sapien, tincidunt non, euismod vitae, posuere imperdiet, leo. Maecenas malesuada.</p>
+                        <div class="float-right mt-n1">
+                            <img src="https://bootdey.com/img/Content/avatar/avatar6.png" width="32" height="32" class="rounded-circle" alt="Avatar">
+                        </div>
+                        <a class="btn btn-outline-primary btn-sm" href="#">View</a>
+                    </div>
+                </div>
+                <a href="#" class="btn btn-primary btn-block">Add new</a>
+            </div>
+        </div>
     </div>
-    <div class="card-body">
-    <div class="custom-control custom-checkbox">
-    <input class="custom-control-input" type="checkbox" id="customCheckbox1" disabled="">
-    <label for="customCheckbox1" class="custom-control-label">Bug</label>
+    <div class="col-12 col-lg-6 col-xl-3">
+        <div class="card card-border-primary">
+            <div class="card-header">
+                <div class="card-actions float-right">
+                    <div class="dropdown show">
+                        <a href="#" data-toggle="dropdown" data-display="static">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal align-middle">
+                                <circle cx="12" cy="12" r="1"></circle>
+                                <circle cx="19" cy="12" r="1"></circle>
+                                <circle cx="5" cy="12" r="1"></circle>
+                            </svg>
+                        </a>
+
+                        <div class="dropdown-menu dropdown-menu-right">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </div>
+                </div>
+                <h5 class="card-title">Iniciando</h5>
+            </div>
+            <div class="card-body p-3">
+                <div class="card mb-3 bg-light">
+                    <div class="card-body p-3">
+                        <p>Curabitur ligula sapien, tincidunt non, euismod vitae, posuere imperdiet, leo. Maecenas malesuada.</p>
+                        <div class="float-right mt-n1">
+                            <img src="https://bootdey.com/img/Content/avatar/avatar6.png" width="32" height="32" class="rounded-circle" alt="Avatar">
+                        </div>
+                        <a class="btn btn-outline-primary btn-sm" href="#">View</a>
+                    </div>
+                </div>
+                <a href="#" class="btn btn-primary btn-block">Add new</a>
+            </div>
+        </div>
     </div>
-    <div class="custom-control custom-checkbox">
-    <input class="custom-control-input" type="checkbox" id="customCheckbox2" disabled="">
-    <label for="customCheckbox2" class="custom-control-label">Feature</label>
-    </div>
-    <div class="custom-control custom-checkbox">
-    <input class="custom-control-input" type="checkbox" id="customCheckbox3" disabled="">
-    <label for="customCheckbox3" class="custom-control-label">Enhancement</label>
-    </div>
-    <div class="custom-control custom-checkbox">
-    <input class="custom-control-input" type="checkbox" id="customCheckbox4" disabled="">
-    <label for="customCheckbox4" class="custom-control-label">Documentation</label>
-    </div>
-    <div class="custom-control custom-checkbox">
-    <input class="custom-control-input" type="checkbox" id="customCheckbox5" disabled="">
-    <label for="customCheckbox5" class="custom-control-label">Examples</label>
-    </div>
-    </div>
-    </div>
-    <div class="card card-primary card-outline">
-    <div class="card-header">
-    <h5 class="card-title">Create Issue template</h5>
-    <div class="card-tools">
-    <a href="#" class="btn btn-tool btn-link">#4</a>
-    <a href="#" class="btn btn-tool">
-    <i class="fas fa-pen"></i>
-    </a>
-    </div>
-    </div>
-    <div class="card-body">
-    <div class="custom-control custom-checkbox">
-    <input class="custom-control-input" type="checkbox" id="customCheckbox1_1" disabled="">
-    <label for="customCheckbox1_1" class="custom-control-label">Bug Report</label>
-    </div>
-    <div class="custom-control custom-checkbox">
-    <input class="custom-control-input" type="checkbox" id="customCheckbox1_2" disabled="">
-    <label for="customCheckbox1_2" class="custom-control-label">Feature Request</label>
-    </div>
-    </div>
-    </div>
-    <div class="card card-primary card-outline">
-    <div class="card-header">
-    <h5 class="card-title">Create PR template</h5>
-    <div class="card-tools">
-    <a href="#" class="btn btn-tool btn-link">#6</a>
-    <a href="#" class="btn btn-tool">
-    <i class="fas fa-pen"></i>
-    </a>
-    </div>
-    </div>
-    </div>
-    <div class="card card-light card-outline">
-    <div class="card-header">
-    <h5 class="card-title">Create Actions</h5>
-    <div class="card-tools">
-    <a href="#" class="btn btn-tool btn-link">#7</a>
-    <a href="#" class="btn btn-tool">
-    <i class="fas fa-pen"></i>
-    </a>
-    </div>
-    </div>
-    <div class="card-body">
-    <p>
-    Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-    Aenean commodo ligula eget dolor. Aenean massa.
-    Cum sociis natoque penatibus et magnis dis parturient montes,
-     nascetur ridiculus mus.
-    </p>
-    </div>
-    </div>
-    </div>
-    </div>
-    <div class="card card-row card-primary">
-    <div class="card-header">
-    <h3 class="card-title">
-    To Do
-    </h3>
-    </div>
-    <div class="card-body">
-    <div class="card card-primary card-outline">
-    <div class="card-header">
-    <h5 class="card-title">Create first milestone</h5>
-    <div class="card-tools">
-    <a href="#" class="btn btn-tool btn-link">#5</a>
-    <a href="#" class="btn btn-tool">
-    <i class="fas fa-pen"></i>
-    </a>
-    </div>
-    </div>
-    </div>
-    </div>
-    </div>
-    <div class="card card-row card-default">
-    <div class="card-header bg-info">
-    <h3 class="card-title">
-    In Progress
-    </h3>
-    </div>
-    <div class="card-body">
-    <div class="card card-light card-outline">
-    <div class="card-header">
-    <h5 class="card-title">Update Readme</h5>
-    <div class="card-tools">
-    <a href="#" class="btn btn-tool btn-link">#2</a>
-    <a href="#" class="btn btn-tool">
-    <i class="fas fa-pen"></i>
-    </a>
-    </div>
-    </div>
-    <div class="card-body">
-    <p>
-    Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-    Aenean commodo ligula eget dolor. Aenean massa.
-    Cum sociis natoque penatibus et magnis dis parturient montes,
-    nascetur ridiculus mus.
-    </p>
-    </div>
-    </div>
-    </div>
-    </div>
-    <div class="card card-row card-success">
-    <div class="card-header">
-    <h3 class="card-title">
-    Done
-    </h3>
-    </div>
-    <div class="card-body">
-    <div class="card card-primary card-outline">
-    <div class="card-header">
-    <h5 class="card-title">Create repo</h5>
-    <div class="card-tools">
-    <a href="#" class="btn btn-tool btn-link">#1</a>
-    <a href="#" class="btn btn-tool">
-    <i class="fas fa-pen"></i>
-    </a>
-    </div>
-    </div>
-    </div>
-    </div>
-    </div>
-    </div>
-    </section>
-    </div>
+    
+</div>
+    
+</div>
+
 {% endblock  %}
