--- a/code/registry/templates/registry_detail/registry_contacts.html
+++ b/code/registry/templates/registry_detail/registry_contacts.html
@@ -37,7 +37,7 @@
 </div>
 <div>
     <button class="btn btn-success" data-toggle="modal" data-target="#registry-contacts-create">
-        Criando novo contato de registro
+        Criar
     </button>
 </div>
     
