--- a/code/project/templates/login/login.html
+++ b/code/project/templates/login/login.html
@@ -1,48 +1,52 @@
 {% load static %}
-<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>Login | Macedo & Azevedo</title>
-	<link rel="stylesheet" type="text/css" href="{% static 'dist/css/login/style.css' %}">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    {% include "base/head.html" %}
+    <meta charset="utf-8">
+    <title>Login | Macedo & Azevedo</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'dist/css/login/style.css' %}">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
-<body>
-	<div>
-
-		<div class="register-page">
-			<div class="form">
-				<h1>Macedo & Azevedo</h1>
-				<h2>Bem-vindo(a)</h2>
-				<p>Por favor, faça login para continuar.</p>
-				<form class="login-form" action="{% url 'login' %}" method="POST" >
-					{% csrf_token %}
-					<input class="form-control" name="email" type="text" placeholder="Email"/>
-					<input class="form-control" name="password" type="password" placeholder="Senha"/>
-					<button>Entrar</button>
-				</form>
-			</div>
-            <div class="container">
-    			{% include "messages/messages.html" %}
+<body class="hold-transition login-page">
+<div class="login-box">
+  <div class="login-logo">
+    <img style="width: 100px; height: 100px; border-radius: 150px;" src="{% static 'dist/img/images/277606405_1177846459642535_7637691257266544301_n.jpg' %}" alt="">
+    <br>
+    <a href="https://www.macedoeazevedo.adv.br/"><b>Macedo & Azevedo</b></a>
+  </div>
+  <div class="card">
+    <div class="card-body login-card-body">
+      <p class="login-box-msg">Olá, Dr(a). Faça seu login</p>
+      <form class="login-form" action="{% url 'login' %}" method="POST" >
+        {% csrf_token %}
+        <div class="input-group mb-3">
+          <input type="email" class="form-control" name="email" placeholder="Email">
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <span class="fas fa-envelope"></span>
             </div>
-		</div>
-		<div class="footer">
-
-			<p>&copy; 2023 Macedo & Azevedo. Todos os direitos reservados.</p>
-			<ul>
-				<li><a href="#">Política de Privacidade</a></li>
-				<li><a href="#">Termos de Uso</a></li>
-				<li><a href="#">Suporte</a></li>
-			</ul>
-		</div>
-	</div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script>
-		$(document).ready(function(){
-			$('.toast').toast('show')
-		})
-	</script>
+          </div>
+        </div>
+        <div class="input-group mb-3">
+          <input type="password" class="form-control" name="password" placeholder="Senha">
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <span class="fas fa-lock"></span>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary btn-block">Entrar</button>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        {% include "messages/messages.html" %}
+      </div>
+      </form>
+    </div>
+  </div>
+</div>
 </body>
 </html>
