--- a/code/registry/templates/registry_detail/registry_modals/registry_email_sender.html
+++ b/code/registry/templates/registry_detail/registry_modals/registry_email_sender.html
@@ -1,3 +1,4 @@
+{% if registry %}
 <div class="modal fade" id="registry-email-sender-modal-{{registry.pk}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -43,3 +44,4 @@
         </div>
     </div>
 </div>
+{% endif %}
