--- a/code/registry/templates/registry_list.html
+++ b/code/registry/templates/registry_list.html
@@ -56,14 +56,14 @@
                                         </span>
                                     {% endif %}
                                 </div>
-
-
-
                             </div>
                             <a href="{% url 'registry:registry_detail' registry.pk %}">
                             <div class="card-body pt-0">
                                 <div class="row">
                                     <div class="col-7 mt-2">
+                                        <span class="text-dark">
+                                            <b>Nome</b><span> {{ registry.name }} </span><br>
+                                        </span>
                                         {% if registry.registry_cpf.cpf %}
                                             <span class="text-dark"><b>CPF </b> {{registry.registry_cpf.cpf}} </span><br>
                                         {% else %}
