:hammer: fixing hotmail

--- a/code/project/templates/emails/cliente_message.html
+++ b/code/project/templates/emails/cliente_message.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!doctype html>
 <html lang="en" lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml"
     xmlns:o="urn:schemas-microsoft-com:office:office">
@@ -406,7 +408,7 @@
                                                         <tbody>
                                                             <tr>
                                                                 <td style="width:74px;"> <img alt="" height="auto"
-                                                                        src="img/0882220240203232ee07e3679736a37b.png"
+                                                                        src="{% static 'dist/img/email/0882220240203232ee07e3679736a37b.png' %}"
                                                                         style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;"
                                                                         title="" width="74">
                                                                 </td>
@@ -492,7 +494,7 @@
                                                     <tbody>
                                                         <tr>
                                                             <td style="width:244px;"> <img alt="" height="auto"
-                                                                    src="img/43f8e3218cfba5a212582d9eba575e90.png"
+                                                                    src="{% static 'dist/img/email/43f8e3218cfba5a212582d9eba575e90.png' %}"
                                                                     style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;"
                                                                     title="" width="244">
                                                             </td>
@@ -571,7 +573,8 @@
                                                 style="font-size:0;padding-bottom:8px;word-break:break-word;">
                                                 <div style="text-align:center;">
                                                     <p style="Margin:0;text-align:center;">
-                                                        <span style="font-size:28px;font-family:Inter,Arial,sans-serif;font-weight:700;color:#000000;line-height:114%;">
+                                                        <span
+                                                            style="font-size:28px;font-family:Inter,Arial,sans-serif;font-weight:700;color:#000000;line-height:114%;">
                                                             {{title}}
                                                         </span>
                                                     </p>
@@ -642,7 +645,7 @@
                                                 <td align="left" class="x" style="font-size:0;word-break:break-word;">
                                                     <div style="text-align:left;">
                                                         <p style="Margin:0;text-align:left;">
-                                                            <a href"https://www.macedoeazevedo.adv.br/"
+                                                            <a href="https://www.macedoeazevedo.adv.br/" target="_blank"
                                                                 style="font-size:20px;font-family:Inter,Arial,sans-serif;font-weight:500;color:#5fcfff;line-height:115%;text-decoration:underline;">
                                                                 MAADV
                                                             </a>
@@ -689,7 +692,7 @@
                                                                     <a
                                                                         href="https://api.whatsapp.com/send/?phone=5521976637230&text&type=phone_number&app_absent=0">
                                                                         <img alt="" height="auto"
-                                                                            src="img/29ffb9df762279515d8d14bda5e39451.png"
+                                                                            src="{% static 'dist/img/email/29ffb9df762279515d8d14bda5e39451.png' %}"
                                                                             style="margin-left: 70px;border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;"
                                                                             title="" width="74">
                                                                     </a>
@@ -748,7 +751,7 @@
                                                                                     <a
                                                                                         href="https://www.instagram.com/macedoeazevedoadv/">
                                                                                         <img alt="" height="auto"
-                                                                                            src="img/10000147-removebg-preview.png"
+                                                                                            src="{% static 'dist/img/email/10000147-removebg-preview.png' %}"
                                                                                             style="border:0;display:block;outline:none;text-decoration:none;height:30px;width:30px;font-size:13px;"
                                                                                             title="" width="30">
                                                                                     </a>
