--- a/code/registry/templates/registry_detail/registry_modals/registry_email_sender.html
+++ b/code/registry/templates/registry_detail/registry_modals/registry_email_sender.html
@@ -28,7 +28,7 @@
                     <input class="form-control" type="text" name="title" id="title">
 
                     <label for="text">Texto para ser enviado</label>
-                    <textarea class="form-control" id="text" rows="3"></textarea>
+                    <textarea class="form-control" name="title" id="text" rows="3"></textarea>
                     <hr>
                     <label for="file">Arquivos</label>
                     <input type="file" name="files[]" multiple>
