--- a/code/project/templates/emails/cliente_message.html
+++ b/code/project/templates/emails/cliente_message.html
@@ -494,7 +494,7 @@
                                                     <tbody>
                                                         <tr>
                                                             <td style="width:244px;"> <img alt="" height="auto"
-                                                                    src="{% static 'dist/img/email/43f8e3218cfba5a212582d9eba575e90.png' %}"
+                                                                    src="https://i.imgur.com/hAiypNm.png"
                                                                     style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;"
                                                                     title="" width="244">
                                                             </td>
