--- a/code/project/templates/emails/cliente_message.html
+++ b/code/project/templates/emails/cliente_message.html
@@ -408,7 +408,7 @@
                                                         <tbody>
                                                             <tr>
                                                                 <td style="width:74px;"> <img alt="" height="auto"
-                                                                        src="{% static 'dist/img/email/0882220240203232ee07e3679736a37b.png' %}"
+                                                                        src="https://i.imgur.com/HkzWwC9.png"
                                                                         style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;"
                                                                         title="" width="74">
                                                                 </td>
@@ -692,7 +692,7 @@
                                                                     <a
                                                                         href="https://api.whatsapp.com/send/?phone=5521976637230&text&type=phone_number&app_absent=0">
                                                                         <img alt="" height="auto"
-                                                                            src="{% static 'dist/img/email/29ffb9df762279515d8d14bda5e39451.png' %}"
+                                                                            src="https://i.imgur.com/5cDl1Dy.png"
                                                                             style="margin-left: 70px;border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;"
                                                                             title="" width="74">
                                                                     </a>
@@ -751,7 +751,7 @@
                                                                                     <a
                                                                                         href="https://www.instagram.com/macedoeazevedoadv/">
                                                                                         <img alt="" height="auto"
-                                                                                            src="{% static 'dist/img/email/10000147-removebg-preview.png' %}"
+                                                                                            src="https://i.imgur.com/85wo29f.png"
                                                                                             style="border:0;display:block;outline:none;text-decoration:none;height:30px;width:30px;font-size:13px;"
                                                                                             title="" width="30">
                                                                                     </a>
